# mmd

./: CMakeLists.txt  README.md
.cache/clangd/index/: _fixes.hpp.427B5D39936DFF33.idx  _vectorize.hpp.7E75252D9C49467C.idx  animation_clip.hpp.3829A8DA03A621F8.idx  animator.cpp.69D7EF232FCAA6A0.idx  animator.hpp.D25B1184C990E20F.idx  application.cpp.CC4AEDF00DDEC589.idx  application.hpp.943BA6DE261C7C3E.idx  camera.cpp.0107B5984BFF7D65.idx  camera.hpp.484EEC096EB04FFF.idx  common.hpp.64EC6B6A8D650C22.idx  compute_common.hpp.36B5AE3E3A4CD141.idx  compute_vector_decl.hpp.377C38866866E244.idx  compute_vector_relational.hpp.5BD4EBC7B3BD9ED5.idx  constants.hpp.DDB6248A33DEDFAE.idx  constants.inl.83E93DA1C74314C5.idx  context.c.7D1B7C499A902459.idx  egl_context.c.7BD59123E854A45B.idx  entity.hpp.2F2934DCE0CB98B8.idx  epsilon.hpp.5BC7532C4B2D1864.idx  epsilon.inl.A1B274C6CC0B3806.idx  exponential.hpp.ACEDF63C95B0F363.idx  free_camera_controller.cpp.A1694E8AED8F93E8.idx  free_camera_controller.hpp.4F6D4CB3075FD67A.idx  func_common.inl.041A996E4176D70D.idx  func_exponential.inl.466DB8902FA9B607.idx  func_geometric.inl.EC51964AFE84D62B.idx  func_integer.inl.E60BA9F94821747D.idx  func_matrix.inl.D985BF9514A37C8A.idx  func_packing.inl.D60B543E4DD9D7D4.idx  func_trigonometric.inl.37464EB92A4607C1.idx  func_vector_relational.inl.BE88B65581800005.idx  fwd.hpp.C9523D6A710A1E67.idx  geometric.hpp.8BD26966E2BE15D2.idx  glad.c.1601A963A4DBA6F5.idx  glad.h.350514A03237F48D.idx  glfw3.h.DFD05DFBCA14E5BD.idx  glfw3native.h.2C56C69B9FC43A99.idx  glm.hpp.539AFB93EDD5C70B.idx  glx_context.c.A63B193941E5FFF7.idx  ik_solver.cpp.8231280D9609C240.idx  (+239 more)
assets/motions/act2/action2/: 相机.vmd  表情.vmd
src/animation/: CMakeLists.txt  animation_clip.hpp  animator.cpp  animator.hpp  ik_solver.cpp  ik_solver.hpp  pose.hpp  pose_physics.cpp  pose_physics.hpp  skeleton.cpp  skeleton.hpp  skinning.cpp  skinning.hpp
src/app/: CMakeLists.txt  application.cpp  application.hpp  free_camera_controller.cpp  free_camera_controller.hpp  main.cpp  mmd_diagnostics.cpp  mmd_diagnostics.hpp
src/asset/: CMakeLists.txt  pmx_loader.cpp  pmx_loader.hpp  pmx_types.hpp  vmd_loader.cpp  vmd_loader.hpp  vmd_types.hpp
src/core/: CMakeLists.txt  log.cpp  log.hpp  timer.cpp  timer.hpp  types.hpp
src/physics/: CMakeLists.txt  pbd_world.cpp  pbd_world.hpp  pmx_physics_builder.cpp  pmx_physics_builder.hpp
src/platform/: CMakeLists.txt  input.cpp  input.hpp  window.cpp  window.hpp
src/render/: CMakeLists.txt  material.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  skinned_mesh.cpp  skinned_mesh.hpp  texture.cpp  texture.hpp
src/scene/: CMakeLists.txt  camera.cpp  camera.hpp  entity.hpp  scene.cpp  scene.hpp  transform.hpp
src/shaders/: post.frag  static.vert
